// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DebugHistoryMiddleware > correctly handles async updates 1`] = `
{
  "0_q1": [
    {
      "dispatchedUpdate": {
        "type": "Promise",
        "value": Promise {},
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "Promise",
      "source": "Promise",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "5",
    },
    {
      "dispatchedUpdate": {
        "type": "Function",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "Function",
      "source": "Function",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "6",
    },
    {
      "dispatchedUpdate": {
        "type": "Promise",
        "value": Promise {},
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "Promise",
      "source": "Function",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "6",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAR",
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "Sync",
      "source": "Promise",
      "stackTrace": undefined,
      "time": 1600000000400,
      "updateID": "5",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAZ",
      },
      "initialState": {
        "type": "Value",
        "value": "BAR",
      },
      "isCanceled": false,
      "phase": "Sync",
      "source": "Function",
      "stackTrace": undefined,
      "time": 1600000000500,
      "updateID": "6",
    },
  ],
}
`;

exports[`DebugHistoryMiddleware > correctly handles procedures 1`] = `
{
  "0_q1": [],
  "1_q2": [
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "Sync",
      "source": "Sync",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "8",
    },
    {
      "dispatchedUpdate": {
        "type": "Procedure",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "Procedure",
      "source": "Procedure",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "Function",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "Function",
      "source": "Procedure",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "Sync",
      "source": "Procedure",
      "stackTrace": undefined,
      "time": 1600000000400,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "Function",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "Function",
      "source": "Procedure",
      "stackTrace": undefined,
      "time": 1600000000500,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": "foo",
        },
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "Sync",
      "source": "Procedure",
      "stackTrace": undefined,
      "time": 1600000000600,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": "bar",
        },
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": "foo",
        },
      },
      "isCanceled": false,
      "phase": "Sync",
      "source": "Procedure",
      "stackTrace": undefined,
      "time": 1600000000700,
      "updateID": "9",
    },
  ],
}
`;

exports[`DebugHistoryMiddleware > correctly saves updates to the history tracker 1`] = `
{
  "0_q1": [
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAR",
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "Sync",
      "source": "Sync",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "2",
    },
    {
      "dispatchedUpdate": {
        "type": "Function",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": "BAR",
      },
      "isCanceled": false,
      "phase": "Function",
      "source": "Function",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "3",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAZ",
      },
      "initialState": {
        "type": "Value",
        "value": "BAR",
      },
      "isCanceled": false,
      "phase": "Sync",
      "source": "Function",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "3",
    },
  ],
}
`;
